2000-08-13  Chris Toshok  <toshok@helixcode.com>

	* configure.in: offer --enable-pilot-conduits to add pilot
	conduits if the user wants them.

2000-08-13  Dan Winship  <danw@helixcode.com>

	* configure.in: Fix the name of the binary to look for for PGP5

2000-08-12  Michael Meeks  <michael@helixcode.com>

	* configure.in: Check for Bonobo 0.17

2000-08-12  Christopher James Lahey  <clahey@helixcode.com>

	* configure.in: Added addressbook/gui/search/Makefile.

2000-08-12  Dan Winship  <danw@helixcode.com>

	* configure.in, README: Depend on gnome-vfs 0.3

2000-08-10  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/.cvsignore, widgets/e-text/Makefile.am,
	widgets/e-text/e-entry-test.c: Added a test for the EEntry widget.

2000-08-09  Dan Winship  <danw@helixcode.com>

	* data/evolution.keys: New file containing MIME keys for
	Evolution. Currently just the addressbook minicard display.

	* data/Makefile.am (mime_DATA): add evolution.keys

2000-08-09  Peter Williams  <peterw@helixcode.com>

	* configure.in (EVOLUTION_DIR): Remove the warning about camel-async.

2000-08-08  Peter Williams  <peterw@helixcode.com>

	* Makefile.am (SUBDIRS): Reenable the calendar. Oops.

2000-08-05  Dan Winship  <danw@helixcode.com>

	* tools/verify-evolution-install.sh: Look for oafinfo files in
	oaf's prefix, not gnome-libs's. Allow binaries to be installed
	anywhere in $PATH.

	* configure.in, README: Update the README and the text of the
	Bonobo configure check to match reality. Remove the 0.15 vs
	0.15-and-a-half check since we require post-0.16 now.

2000-08-03  JP Rosevear  <jpr@helixcode.com>

	* configure.in: Remove gconf check

2000-08-03 Alastair McKinstry <mckinstry@computer.org>

	* configure.in (ALL_LINGUAS): Add Irish translation

2000-08-02  Michael Meeks  <michael@helixcode.com>

	* configure.in: update for BonoboX

2000-08-02  Dan Winship  <danw@helixcode.com>

	* configure.in (AC_OUTPUT): Add camel/providers/nntp
