@@ -137,8 +137,10 @@ dnl **************************************************
 dnl * pas-backend-file stuff.
 dnl * check for db_185.h.  if it's there, we use it.
 dnl * otherwise, we use db.h (since it'll be 185).
+dnl * Except on RH7.0, which puts db in yet another place
 dnl **************************************************
 AC_CHECK_HEADERS(db_185.h)
+AC_CHECK_HEADERS(db1/db.h)
 
 dnl **************************************************
 dnl * ldap related stuff.
