@@ -1,3 +1,7 @@
+2000-08-14  Peter Williams  <peterw@helixcode.com>
+
+	* mail-ops.c (do_scan_subfolders): Silence a compile warning.
+
 2000-08-13  Jeffrey Stedfast  <fejj@helixcode.com>
 
 	* mail-crypto.c (mail_crypto_openpgp_encrypt): Added support for
